# dxos

./: .actrc  .beastrc.yml  .coderabbit.yaml  .cusorignore  .dockerignore  .editorconfig  .env.1password  .eslintignore  .eslintrc.base.json  .eslintrc.jest.json  .eslintrc.js  .eslintrc.json  .eslintrc.packlets.cjs  .eslintrc.packlets.js  .eslintrc.packlets.json  .eslintrc.react.json  .gitattributes  .gitignore  .mcp.json  .ncurc.js  .node-version  .npmrc  .nxignore  .opencode.yaml  .oxfmtrc.json  .oxlintrc.json  .pnpmfile.cjs  .pr-body.md  .prettierignore  .prettierrc  .protocols  .prototools  .release-please-manifest.json  .syncpackrc.yml  .twignore  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  (+77 more)
.agents/: separator-audit.md  separator-consolidation-plan.md
.changeset/: README.md  ambient-review-model.md  (+104 more)
tools/swc-log-plugin/: .eslintrc.json  .gitignore  Cargo.toml  README.md  package.json  project.json
tools/swc-log-plugin/src/: config.rs  lib.rs  param_transform.rs
tools/swc-log-plugin/test-rig/: rig.mjs
tools/swc-log-plugin/test-rig/inputs/: decorators.ts
tools/swc-log-plugin/test-rig/outputs/: decorators.ts
tools/swc-log-plugin/tests/__swc_snapshots__/src/lib.rs/: big_boy.js  ignores_call_sites_where_argument_was_provided.js  ignores_imports_from_other_modules.js  ignores_other_log_functions.js  import_renames.js  include_args_true.js  log_levels.js  log_with_context.js  log_with_no_args.js  modifies_object_literal_param.js  multiple_constructor_calls.js  multiple_log_statements.js  single_constructor.js  single_log.js  two_log_imports.js  two_log_imports_2.js
(+7135 files in other folders)
