[package]
name = "swc-log-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Enabling LTO causes memory errors.
# lto = true

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "26.4.5", features = ["ecma_visit", "ecma_ast", "ecma_transforms", "ecma_plugin_transform"] }
swc_ecma_lexer = "*"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
